<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginVideModel"
            type="com.saynope.drawandguess.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorAccent"
            android:textColor="@color/title_text_color"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/orange"
            android:contentDescription="@string/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="12dp"
            android:id="@+id/nick_name_container"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                app:afterTextChange="@{()->loginVideModel.checkInput()}"
                android:inputType="text"
                android:singleLine="true"
                android:text="@={loginVideModel.nickName}"
                android:id="@+id/nick_name"
                android:hint="@string/nick_name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_container"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/nick_name_container"
            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                app:afterTextChange="@{()->loginVideModel.checkInput()}"
                android:inputType="number"
                android:singleLine="true"
                android:text="@={loginVideModel.phoneNumber}"
                android:id="@+id/phone_number"
                android:hint="@string/phone_number_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:errorTextColor="@color/input_text_error"
            android:id="@+id/password_container"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/phone_number_container"
            android:layout_width="match_parent"
            app:counterEnabled="true"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                app:afterTextChange="@{()->loginVideModel.checkInput()}"
                android:singleLine="true"
                android:inputType="textPassword"
                android:text="@={loginVideModel.password}"
                android:id="@+id/password"
                android:hint="@string/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:textSize="20sp"
            android:textColor="@color/btn_text_color"
            android:text="@string/register"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>