<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="homeViewModel"
            type="com.saynope.drawandguess.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="240dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/bg_title"
            android:gravity="center"
            android:text="@string/draw_and_guess"
            android:textColor="@color/title_text_color"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="48dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/pencil_lottie_animation_view"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_fileName="lottie-drawing-pencil.json" />

        <TextView
            android:id="@+id/tips_text"
            android:layout_marginTop="12dp"
            android:text="@{@string/welcome_to_guess_and_draw(homeViewModel.user.nickName)}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pencil_lottie_animation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/hint_text_color" />

        <Button
            android:foreground="?selectableItemBackground"
            android:background="@drawable/bg_btn_nomal"
            android:text="@string/join_room"
            android:textColor="@color/btn_text_color"
            android:id="@+id/join_room"
            android:layout_marginTop="@dimen/space_button_to_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tips_text"
            android:layout_width="240dp"
            android:layout_height="48dp" />

        <Button
            android:foreground="?selectableItemBackground"
            android:background="@drawable/bg_btn_nomal"
            android:text="@string/create_room"
            android:textColor="@color/btn_text_color"
            android:id="@+id/create_room"
            android:layout_marginTop="@dimen/space_button_to_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/join_room"
            android:layout_width="240dp"
            android:layout_height="48dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>